--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type=”text/javascript” src=”https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.min.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
